bug fix on masterlist overview

--- a/dmu1/Masterlist_overview.ipynb
+++ b/dmu1/Masterlist_overview.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,19 +97,19 @@
     "    number_objects = len(Table.read('dmu1_{}/data/master_list_cross_ident_{}_{}.fits'.format(field[0], \n",
     "                                                                                      field[0].lower(), \n",
     "                                                                                      field[1])))\n",
-    "    masterlist_summary[masterlist_summary['Field'] == field[0]]['#Objects'] = number_objects\n",
+    "    masterlist_summary['#Objects'][masterlist_summary['Field'] == field[0]] = number_objects\n",
     "    \n",
     "    \n",
     "    moc = MOC(filename='../dmu2/dmu2_field_coverages/{}_MOC.fits'.format(field[0]))\n",
     "    area = round(moc.area_sq_deg)\n",
-    "    masterlist_summary[masterlist_summary['Field'] == field[0]]['#Area (sq. degrees)'] = area\n",
+    "    masterlist_summary['#Area (sq. degrees)'][masterlist_summary['Field'] == field[0]] = area\n",
     "    \n",
     "    size = os.stat('dmu1_{}/data/master_catalogue_{}_{}.fits'.format(field[0], \n",
     "                                                                                      field[0].lower(), \n",
     "                                                                                      field[1])).st_size\n",
     "    #Can't install packages on Vulcain\n",
     "    #size_readable = humanfriendly.format_size(size)\n",
-    "    masterlist_summary[masterlist_summary['Field'] == field[0]]['#File size'] = size\n",
+    "    masterlist_summary['#File size'][masterlist_summary['Field'] == field[0]] = size\n",
     "    \n",
     "    #TODO:\n",
     "    num_surveys = 0.\n",
