--- a/dmu1/dmu1_ml_SGP/2.2_Merging.ipynb
+++ b/dmu1/dmu1_ml_SGP/2.2_Merging.ipynb
@@ -90,7 +90,9 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#atlas = Table.read(\"{}/ATLAS.fits\".format(TMP_DIR))[\"atlas_id\", \"atlas_ra\", \"atlas_dec\",\n",
@@ -687,7 +689,7 @@
    "outputs": [],
    "source": [
     "master_catalogue[id_names].write(\n",
-    "    \"{}/master_list_cross_ident_hatlas-sgp{}.fits\".format(OUT_DIR, SUFFIX), overwrite=True)\n",
+    "    \"{}/master_list_cross_ident_sgp{}.fits\".format(OUT_DIR, SUFFIX), overwrite=True)\n",
     "id_names.remove('help_id')\n",
     "\n",
     "master_catalogue.remove_columns(['atlas_id', 'kids_id'])"
@@ -803,7 +805,9 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "surveys = [\n",
@@ -831,7 +835,9 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "n=0\n",
@@ -944,246 +950,24 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 34,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['ra',\n",
-       " 'dec',\n",
-       " 'flag_cleaned',\n",
-       " 'flag_gaia',\n",
-       " 'stellarity',\n",
-       " 'stellarity_origin',\n",
-       " 'ebv',\n",
-       " 'help_id',\n",
-       " 'field',\n",
-       " 'flag_optnir_obs',\n",
-       " 'hp_idx',\n",
-       " 'omegacam_ra',\n",
-       " 'omegacam_dec',\n",
-       " 'atlas_stellarity',\n",
-       " 'm_ap_omegacam_ul',\n",
-       " 'merr_ap_omegacam_ul',\n",
-       " 'm_omegacam_ul',\n",
-       " 'merr_omegacam_ul',\n",
-       " 'm_ap_omegacam_z',\n",
-       " 'merr_ap_omegacam_z',\n",
-       " 'm_omegacam_z',\n",
-       " 'merr_omegacam_z',\n",
-       " 'f_ap_omegacam_ul',\n",
-       " 'ferr_ap_omegacam_ul',\n",
-       " 'f_omegacam_ul',\n",
-       " 'ferr_omegacam_ul',\n",
-       " 'flag_omegacam_ul',\n",
-       " 'f_ap_omegacam_z',\n",
-       " 'ferr_ap_omegacam_z',\n",
-       " 'f_omegacam_z',\n",
-       " 'ferr_omegacam_z',\n",
-       " 'flag_omegacam_z',\n",
-       " 'atlas_flag_cleaned',\n",
-       " 'atlas_flag_gaia',\n",
-       " 'kids_stellarity',\n",
-       " 'kids_flag_cleaned',\n",
-       " 'kids_flag_gaia',\n",
-       " 'f_omegacam_u',\n",
-       " 'ferr_omegacam_u',\n",
-       " 'm_omegacam_u',\n",
-       " 'merr_omegacam_u',\n",
-       " 'flag_omegacam_u',\n",
-       " 'f_ap_omegacam_u',\n",
-       " 'ferr_ap_omegacam_u',\n",
-       " 'm_ap_omegacam_u',\n",
-       " 'merr_ap_omegacam_u',\n",
-       " 'f_omegacam_g',\n",
-       " 'ferr_omegacam_g',\n",
-       " 'm_omegacam_g',\n",
-       " 'merr_omegacam_g',\n",
-       " 'flag_omegacam_g',\n",
-       " 'f_ap_omegacam_g',\n",
-       " 'ferr_ap_omegacam_g',\n",
-       " 'm_ap_omegacam_g',\n",
-       " 'merr_ap_omegacam_g',\n",
-       " 'f_omegacam_r',\n",
-       " 'ferr_omegacam_r',\n",
-       " 'm_omegacam_r',\n",
-       " 'merr_omegacam_r',\n",
-       " 'flag_omegacam_r',\n",
-       " 'f_ap_omegacam_r',\n",
-       " 'ferr_ap_omegacam_r',\n",
-       " 'm_ap_omegacam_r',\n",
-       " 'merr_ap_omegacam_r',\n",
-       " 'f_omegacam_i',\n",
-       " 'ferr_omegacam_i',\n",
-       " 'm_omegacam_i',\n",
-       " 'merr_omegacam_i',\n",
-       " 'flag_omegacam_i',\n",
-       " 'f_ap_omegacam_i',\n",
-       " 'ferr_ap_omegacam_i',\n",
-       " 'm_ap_omegacam_i',\n",
-       " 'merr_ap_omegacam_i',\n",
-       " 'ps1_ra',\n",
-       " 'ps1_dec',\n",
-       " 'm_ap_gpc1_g',\n",
-       " 'merr_ap_gpc1_g',\n",
-       " 'm_gpc1_g',\n",
-       " 'merr_gpc1_g',\n",
-       " 'm_ap_gpc1_r',\n",
-       " 'merr_ap_gpc1_r',\n",
-       " 'm_gpc1_r',\n",
-       " 'merr_gpc1_r',\n",
-       " 'm_ap_gpc1_i',\n",
-       " 'merr_ap_gpc1_i',\n",
-       " 'm_gpc1_i',\n",
-       " 'merr_gpc1_i',\n",
-       " 'm_ap_gpc1_z',\n",
-       " 'merr_ap_gpc1_z',\n",
-       " 'm_gpc1_z',\n",
-       " 'merr_gpc1_z',\n",
-       " 'm_ap_gpc1_y',\n",
-       " 'merr_ap_gpc1_y',\n",
-       " 'm_gpc1_y',\n",
-       " 'merr_gpc1_y',\n",
-       " 'f_ap_gpc1_g',\n",
-       " 'ferr_ap_gpc1_g',\n",
-       " 'f_gpc1_g',\n",
-       " 'ferr_gpc1_g',\n",
-       " 'flag_gpc1_g',\n",
-       " 'f_ap_gpc1_r',\n",
-       " 'ferr_ap_gpc1_r',\n",
-       " 'f_gpc1_r',\n",
-       " 'ferr_gpc1_r',\n",
-       " 'flag_gpc1_r',\n",
-       " 'f_ap_gpc1_i',\n",
-       " 'ferr_ap_gpc1_i',\n",
-       " 'f_gpc1_i',\n",
-       " 'ferr_gpc1_i',\n",
-       " 'flag_gpc1_i',\n",
-       " 'f_ap_gpc1_z',\n",
-       " 'ferr_ap_gpc1_z',\n",
-       " 'f_gpc1_z',\n",
-       " 'ferr_gpc1_z',\n",
-       " 'flag_gpc1_z',\n",
-       " 'f_ap_gpc1_y',\n",
-       " 'ferr_ap_gpc1_y',\n",
-       " 'f_gpc1_y',\n",
-       " 'ferr_gpc1_y',\n",
-       " 'flag_gpc1_y',\n",
-       " 'ps1_flag_cleaned',\n",
-       " 'ps1_flag_gaia',\n",
-       " 'viking_ra',\n",
-       " 'viking_dec',\n",
-       " 'viking_stellarity',\n",
-       " 'm_vista_z',\n",
-       " 'merr_vista_z',\n",
-       " 'm_ap_vista_z',\n",
-       " 'merr_ap_vista_z',\n",
-       " 'm_vista_y',\n",
-       " 'merr_vista_y',\n",
-       " 'm_ap_vista_y',\n",
-       " 'merr_ap_vista_y',\n",
-       " 'm_vista_j',\n",
-       " 'merr_vista_j',\n",
-       " 'm_ap_vista_j',\n",
-       " 'merr_ap_vista_j',\n",
-       " 'm_vista_h',\n",
-       " 'merr_vista_h',\n",
-       " 'm_ap_vista_h',\n",
-       " 'merr_ap_vista_h',\n",
-       " 'm_vista_k',\n",
-       " 'merr_vista_k',\n",
-       " 'm_ap_vista_k',\n",
-       " 'merr_ap_vista_k',\n",
-       " 'f_vista_z',\n",
-       " 'ferr_vista_z',\n",
-       " 'flag_vista_z',\n",
-       " 'f_ap_vista_z',\n",
-       " 'ferr_ap_vista_z',\n",
-       " 'f_vista_y',\n",
-       " 'ferr_vista_y',\n",
-       " 'flag_vista_y',\n",
-       " 'f_ap_vista_y',\n",
-       " 'ferr_ap_vista_y',\n",
-       " 'f_vista_j',\n",
-       " 'ferr_vista_j',\n",
-       " 'flag_vista_j',\n",
-       " 'f_ap_vista_j',\n",
-       " 'ferr_ap_vista_j',\n",
-       " 'f_vista_h',\n",
-       " 'ferr_vista_h',\n",
-       " 'flag_vista_h',\n",
-       " 'f_ap_vista_h',\n",
-       " 'ferr_ap_vista_h',\n",
-       " 'f_vista_k',\n",
-       " 'ferr_vista_k',\n",
-       " 'flag_vista_k',\n",
-       " 'f_ap_vista_k',\n",
-       " 'ferr_ap_vista_k',\n",
-       " 'viking_flag_cleaned',\n",
-       " 'viking_flag_gaia',\n",
-       " 'des_ra',\n",
-       " 'des_dec',\n",
-       " 'des_stellarity',\n",
-       " 'm_decam_g',\n",
-       " 'merr_decam_g',\n",
-       " 'm_ap_decam_g',\n",
-       " 'merr_ap_decam_g',\n",
-       " 'm_decam_r',\n",
-       " 'merr_decam_r',\n",
-       " 'm_ap_decam_r',\n",
-       " 'merr_ap_decam_r',\n",
-       " 'm_decam_i',\n",
-       " 'merr_decam_i',\n",
-       " 'm_ap_decam_i',\n",
-       " 'merr_ap_decam_i',\n",
-       " 'm_decam_z',\n",
-       " 'merr_decam_z',\n",
-       " 'm_ap_decam_z',\n",
-       " 'merr_ap_decam_z',\n",
-       " 'm_decam_y',\n",
-       " 'merr_decam_y',\n",
-       " 'm_ap_decam_y',\n",
-       " 'merr_ap_decam_y',\n",
-       " 'f_decam_g',\n",
-       " 'ferr_decam_g',\n",
-       " 'flag_decam_g',\n",
-       " 'f_ap_decam_g',\n",
-       " 'ferr_ap_decam_g',\n",
-       " 'f_decam_r',\n",
-       " 'ferr_decam_r',\n",
-       " 'flag_decam_r',\n",
-       " 'f_ap_decam_r',\n",
-       " 'ferr_ap_decam_r',\n",
-       " 'f_decam_i',\n",
-       " 'ferr_decam_i',\n",
-       " 'flag_decam_i',\n",
-       " 'f_ap_decam_i',\n",
-       " 'ferr_ap_decam_i',\n",
-       " 'f_decam_z',\n",
-       " 'ferr_decam_z',\n",
-       " 'flag_decam_z',\n",
-       " 'f_ap_decam_z',\n",
-       " 'ferr_ap_decam_z',\n",
-       " 'f_decam_y',\n",
-       " 'ferr_decam_y',\n",
-       " 'flag_decam_y',\n",
-       " 'f_ap_decam_y',\n",
-       " 'ferr_ap_decam_y',\n",
-       " 'des_flag_cleaned',\n",
-       " 'des_flag_gaia',\n",
-       " 'flag_merged',\n",
-       " 'flag_optnir_det']"
-      ]
-     },
-     "execution_count": 34,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "sub_catalogue.colnames"
+    "## How to generate final catalogue¶\n",
+    "After this notebook has been run there will be a set of sub catalogues in data/tiles/\n",
+    "\n",
+    "These need to be stacked using stilts:\n",
+    "<pre>\n",
+    "suffix=20180111\n",
+    "\n",
+    "ls ./data/tiles/sub_catalogue_sgp_$suffix_*.fits > ./data/tiles/fits_list_$suffix.lis\n",
+    "\n",
+    "stilts tcat in=@./data/tiles/fits_list_$suffix.lis out=./data/master_catalogue_sgp_$suffix.fits\n",
+    "</pre>\n",
+    "For many purposes this file may be too large. In order to run checks and diagnostics we typically take a subset using something like:\n",
+    "<pre>\n",
+    "stilts tpipe cmd='every 10' ./data/master_catalogue_sgp_$suffix.fits omode=out out=./data/master_catalogue_sgp_RANDOM10PCSAMPLE_$suffix.fits\n",
+    "</pre>"
    ]
   }
  ],
