--- a/dmu1/Masterlist_overview.ipynb
+++ b/dmu1/Masterlist_overview.ipynb
@@ -94,7 +94,7 @@
    "outputs": [],
    "source": [
     "for field in dr1:\n",
-    "    number_objects = len(Table.read('dmu1_{}/data/master_list_cross_ident_{}_{}.fits'.format(field[0], \n",
+    "    number_objects = len(Table.read('dmu1_ml_{}/data/master_list_cross_ident_{}_{}.fits'.format(field[0], \n",
     "                                                                                      field[0].lower(), \n",
     "                                                                                      field[1])))\n",
     "    masterlist_summary['#Objects'][masterlist_summary['Field'] == field[0]] = number_objects\n",
@@ -104,7 +104,7 @@
     "    area = round(moc.area_sq_deg)\n",
     "    masterlist_summary['#Area (sq. degrees)'][masterlist_summary['Field'] == field[0]] = area\n",
     "    \n",
-    "    size = os.stat('dmu1_{}/data/master_catalogue_{}_{}.fits'.format(field[0], \n",
+    "    size = os.stat('dmu1_ml_{}/data/master_catalogue_{}_{}.fits'.format(field[0], \n",
     "                                                                                      field[0].lower(), \n",
     "                                                                                      field[1])).st_size\n",
     "    #Can't install packages on Vulcain\n",
