Ran MAsterlist overview on all fields
170 million objects in HELP

--- a/dmu1/Masterlist_overview.ipynb
+++ b/dmu1/Masterlist_overview.ipynb
@@ -16,8 +16,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "from astropy.table import Table, Column\n",
@@ -31,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -48,7 +50,7 @@
     "['ELAIS-N1',           '20171016' ],\n",
     "['ELAIS-N2',           '20171207' ],\n",
     "['ELAIS-S1',           '20180122' ],\n",
-    "['GAMA-09',            '20171216' ],\n",
+    "['GAMA-09',            '20171206' ],\n",
     "['GAMA-12',            '20180129' ],\n",
     "['GAMA-15',            '20180129' ],\n",
     "['HDF-N',              '20171212' ],\n",
@@ -66,22 +68,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "masterlist_summary = Table()\n",
     "masterlist_summary.add_column(Column(data = np.array(dr1)[:,0], name = 'Field'))\n",
-    "masterlist_summary.add_column(Column(data =np.full(len(masterlist_summary), 0, dtype=int), name = '#Objects'))\n",
-    "masterlist_summary.add_column(Column(data =np.full(len(masterlist_summary), np.nan, dtype=float), name = '#Area (sq. degrees)'))\n",
-    "masterlist_summary.add_column(Column(data =np.full(len(masterlist_summary), np.nan, dtype=float), name = '#File size'))"
+    "masterlist_summary.add_column(Column(data =np.full(len(masterlist_summary), 0, dtype=int), name = 'Objects'))\n",
+    "masterlist_summary.add_column(Column(data =np.full(len(masterlist_summary), np.nan, dtype=float), name = 'Area (sq. degrees)'))\n",
+    "masterlist_summary.add_column(Column(data =np.full(len(masterlist_summary), np.nan, dtype=float), name = 'File size'))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total HELP area: 1270 sqare degrees\n"
+     ]
+    }
+   ],
    "source": [
     "help_moc = MOC(filename='../dmu2/help_coverage_MOC.fits')\n",
     "print('Total HELP area: {} sqare degrees'.format(round(help_moc.area_sq_deg)))"
@@ -89,27 +101,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "for field in dr1:\n",
     "    number_objects = len(Table.read('dmu1_ml_{}/data/master_list_cross_ident_{}_{}.fits'.format(field[0], \n",
     "                                                                                      field[0].lower(), \n",
     "                                                                                      field[1])))\n",
-    "    masterlist_summary['#Objects'][masterlist_summary['Field'] == field[0]] = number_objects\n",
+    "    masterlist_summary['Objects'][masterlist_summary['Field'] == field[0]] = number_objects\n",
     "    \n",
     "    \n",
     "    moc = MOC(filename='../dmu2/dmu2_field_coverages/{}_MOC.fits'.format(field[0]))\n",
     "    area = round(moc.area_sq_deg)\n",
-    "    masterlist_summary['#Area (sq. degrees)'][masterlist_summary['Field'] == field[0]] = area\n",
+    "    masterlist_summary['Area (sq. degrees)'][masterlist_summary['Field'] == field[0]] = area\n",
     "    \n",
     "    size = os.stat('dmu1_ml_{}/data/master_catalogue_{}_{}.fits'.format(field[0], \n",
     "                                                                                      field[0].lower(), \n",
     "                                                                                      field[1])).st_size\n",
     "    #Can't install packages on Vulcain\n",
     "    #size_readable = humanfriendly.format_size(size)\n",
-    "    masterlist_summary['#File size'][masterlist_summary['Field'] == field[0]] = size\n",
+    "    masterlist_summary['File size'][masterlist_summary['Field'] == field[0]] = size\n",
     "    \n",
     "    #TODO:\n",
     "    num_surveys = 0.\n",
@@ -119,22 +133,105 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "&lt;Table length=23&gt;\n",
+       "<table id=\"table140510157949976-989224\" class=\"table-striped table-bordered table-condensed\">\n",
+       "<thead><tr><th>idx</th><th>Field</th><th>#Objects</th><th>#Area (sq. degrees)</th><th>#File size</th></tr></thead>\n",
+       "<tr><td>0</td><td>AKARI-NEP</td><td>285786</td><td>9.0</td><td>241231680.0</td></tr>\n",
+       "<tr><td>1</td><td>AKARI-SEP</td><td>844172</td><td>9.0</td><td>524255040.0</td></tr>\n",
+       "<tr><td>2</td><td>Bootes</td><td>3388482</td><td>11.0</td><td>4537221120.0</td></tr>\n",
+       "<tr><td>3</td><td>CDFS-SWIRE</td><td>2171051</td><td>13.0</td><td>5731646400.0</td></tr>\n",
+       "<tr><td>4</td><td>COSMOS</td><td>2779194</td><td>5.0</td><td>4630199040.0</td></tr>\n",
+       "<tr><td>5</td><td>EGS</td><td>1412613</td><td>4.0</td><td>3890416320.0</td></tr>\n",
+       "<tr><td>6</td><td>ELAIS-N1</td><td>4026292</td><td>14.0</td><td>5242279680.0</td></tr>\n",
+       "<tr><td>7</td><td>ELAIS-N2</td><td>1783240</td><td>9.0</td><td>1941984000.0</td></tr>\n",
+       "<tr><td>8</td><td>ELAIS-S1</td><td>1655564</td><td>9.0</td><td>1908901440.0</td></tr>\n",
+       "<tr><td>9</td><td>GAMA-09</td><td>12937982</td><td>62.0</td><td>19652852160.0</td></tr>\n",
+       "<tr><td>10</td><td>GAMA-12</td><td>12369415</td><td>63.0</td><td>14385677760.0</td></tr>\n",
+       "<tr><td>11</td><td>GAMA-15</td><td>14232880</td><td>62.0</td><td>16310928960.0</td></tr>\n",
+       "<tr><td>12</td><td>HDF-N</td><td>130679</td><td>1.0</td><td>188346240.0</td></tr>\n",
+       "<tr><td>13</td><td>Herschel-Stripe-82</td><td>49243287</td><td>363.0</td><td>111585386880.0</td></tr>\n",
+       "<tr><td>14</td><td>Lockman-SWIRE</td><td>4366298</td><td>22.0</td><td>5108604480.0</td></tr>\n",
+       "<tr><td>15</td><td>NGP</td><td>6759591</td><td>178.0</td><td>4704701760.0</td></tr>\n",
+       "<tr><td>16</td><td>SA13</td><td>9799</td><td>0.0</td><td>2554560.0</td></tr>\n",
+       "<tr><td>17</td><td>SGP</td><td>29790690</td><td>295.0</td><td>48529091520.0</td></tr>\n",
+       "<tr><td>18</td><td>SPIRE-NEP</td><td>2674</td><td>0.0</td><td>1157760.0</td></tr>\n",
+       "<tr><td>19</td><td>SSDF</td><td>12661903</td><td>111.0</td><td>7825080960.0</td></tr>\n",
+       "<tr><td>20</td><td>xFLS</td><td>977148</td><td>7.0</td><td>1050474240.0</td></tr>\n",
+       "<tr><td>21</td><td>XMM-13hr</td><td>38629</td><td>1.0</td><td>10019520.0</td></tr>\n",
+       "<tr><td>22</td><td>XMM-LSS</td><td>8752529</td><td>22.0</td><td>33819894720.0</td></tr>\n",
+       "</table><style>table.dataTable {clear: both; width: auto !important; margin: 0 !important;}\n",
+       ".dataTables_info, .dataTables_length, .dataTables_filter, .dataTables_paginate{\n",
+       "display: inline-block; margin-right: 1em; }\n",
+       ".paginate_button { margin-right: 5px; }\n",
+       "</style>\n",
+       "<script>\n",
+       "require.config({paths: {\n",
+       "    datatables: 'https://cdn.datatables.net/1.10.12/js/jquery.dataTables.min'\n",
+       "}});\n",
+       "require([\"datatables\"], function(){\n",
+       "    console.log(\"$('#table140510157949976-989224').dataTable()\");\n",
+       "    $('#table140510157949976-989224').dataTable({\n",
+       "        \"order\": [],\n",
+       "        \"iDisplayLength\": 50,\n",
+       "        \"aLengthMenu\": [[10, 25, 50, 100, 500, 1000, -1], [10, 25, 50, 100, 500, 1000, 'All']],\n",
+       "        \"pagingType\": \"full_numbers\"\n",
+       "    });\n",
+       "});\n",
+       "</script>\n"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "masterlist_summary.show_in_notebook()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total number of objects in HELP: 170619898\n"
+     ]
+    }
+   ],
    "source": [
-    "masterlist_summary.write('dr1_overview.fits')"
+    "print('Total number of objects in HELP: {}'.format(np.sum(masterlist_summary['Objects'])))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING: VerifyWarning: It is strongly recommended that column names contain only upper and lower-case ASCII letters, digits, or underscores for maximum compatibility with other software (got '#Objects'). [astropy.io.fits.column]\n",
+      "WARNING: VerifyWarning: It is strongly recommended that column names contain only upper and lower-case ASCII letters, digits, or underscores for maximum compatibility with other software (got '#Area (sq. degrees)'). [astropy.io.fits.column]\n",
+      "WARNING: VerifyWarning: It is strongly recommended that column names contain only upper and lower-case ASCII letters, digits, or underscores for maximum compatibility with other software (got '#File size'). [astropy.io.fits.column]\n"
+     ]
+    }
+   ],
+   "source": [
+    "masterlist_summary.write('dr1_overview.fits', overwrite=True)"
    ]
   }
  ],
