XMM-LSS merge run on Vulcain
#4

--- a/dmu32/dmu32_AKARI-NEP/AKARI-NEP_catalogue_merging.ipynb
+++ b/dmu32/dmu32_AKARI-NEP/AKARI-NEP_catalogue_merging.ipynb
@@ -4,7 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# CDFS-SWIRE - Merging HELP data products\n",
+    "# AKARI-NEP Merging HELP data products\n",
+    "\n",
+    "There are no spectral or photometric redshifts yet. \n",
     "\n",
     "This notebook merges the various HELP data products on CDFS-SWIRE.\n",
     "\n",
@@ -94,7 +96,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# XID+ PACS\n",
@@ -134,7 +138,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# XID+ SPIRE\n",
