--- a/dmu32/dmu32_AKARI-SEP/AKARI-SEP_catalogue_merging.ipynb
+++ b/dmu32/dmu32_AKARI-SEP/AKARI-SEP_catalogue_merging.ipynb
@@ -4,9 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# CDFS-SWIRE - Merging HELP data products\n",
+    "# AKARI-SEP - Merging HELP data products\n",
     "\n",
-    "This notebook merges the various HELP data products on CDFS-SWIRE.\n",
+    "This notebook merges the various HELP data products on AKARI-SEP.\n",
     "\n",
     "It is first used to create a catalogue that will be used for SED fitting by CIGALE by merging the optical master list, the photo-z and the XID+ far infrared fluxes.  Then, this notebook is used to incorporate the CIGALE physical parameter estimations and generate the final HELP data product on the field."
    ]
@@ -94,7 +94,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# XID+ PACS\n",
@@ -134,7 +136,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# XID+ SPIRE\n",
