Adding specz on COSMOS

--- a/dmu1/dmu1_ml_COSMOS/2_Merging.ipynb
+++ b/dmu1/dmu1_ml_COSMOS/2_Merging.ipynb
@@ -30,11 +30,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/rs548/anaconda/envs/herschelhelp_internal/lib/python3.6/site-packages/seaborn/apionly.py:6: UserWarning: As seaborn no longer sets a default style on import, the seaborn.apionly module is deprecated. It will be removed in a future version.\n",
+      "  warnings.warn(msg, UserWarning)\n"
+     ]
+    }
+   ],
    "source": [
     "%matplotlib inline\n",
     "#%config InlineBackend.figure_format = 'svg'\n",
@@ -698,7 +705,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## V - Adding HELP unique identifiers and field columns"
+    "## V a - Adding HELP unique identifiers and field columns"
    ]
   },
   {
@@ -736,6 +743,49 @@
     "    print(\"The HELP IDs are not unique!!!\")\n",
     "else:\n",
     "    print(\"OK!\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## V b - Adding spec-z"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "specz =  Table.read(\"../../dmu23/dmu23_COSMOS/data/COSMOS-specz-v2.5-public_helpcoverage_helpid_20160512.fits\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "nb_merge_dist_plot(\n",
+    "    SkyCoord(master_catalogue['ra'], master_catalogue['dec']),\n",
+    "    SkyCoord(specz['ra'] * u.deg, specz['dec'] * u.deg)\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "master_catalogue = specz_merge(master_catalogue, specz, radius=1. * u.arcsec)"
    ]
   },
   {
